# S2-metody-programowania

Polimorfizm/: CMakeLists.txt  main.cpp
Polimorfizm/src/: Ball.cpp  Ball.h  Cone.cpp  Cone.h  Cube.cpp  Cube.h  Cuboid.cpp  Cuboid.h  Cylinder.cpp  Cylinder.h  Shape.h  Test.h  Tetrahedron.cpp  Tetrahedron.h
Zadanie Projektowe/: CMakeLists.txt  main.cpp
Zadanie Projektowe/data/: allocations.txt  coaches.txt  trainings.txt
Zadanie Projektowe/src/: Allocation.cpp  Allocation.h  AllocationCollection.cpp  AllocationCollection.h  Coach.cpp  Coach.h  CoachCollection.cpp  CoachCollection.h  Store.cpp  Store.h  Training.cpp  Training.h  TrainingCollection.cpp  TrainingCollection.h  UI.cpp  UI.h  logic.cpp  logic.h
Zjazd 1 - Ćwiczenia 1/: Sprawozdanie.md
Zjazd 1 - Ćwiczenia 1/Zadanie 1/: CMakeLists.txt  main.cpp
Zjazd 1 - Ćwiczenia 1/Zadanie 2/: CMakeLists.txt  main.cpp
Zjazd 1 - Ćwiczenia 1/Zadanie 3/: CMakeLists.txt  main.cpp
Zjazd 1 - Ćwiczenia 1/Zadanie 4/: CMakeLists.txt  main.cpp
Zjazd 2 - Ćwiczenia 2/Zadanie 1/: main.cpp
Zjazd 2 - Ćwiczenia 2/Zadanie 2/: main.cpp
Zjazd 3 - Ćwiczenia 3/Zadanie 1,2,3/: CMakeLists.txt  main.cpp
Zjazd 3 - Ćwiczenia 3/Zadanie 1,2,3/src/: Order.cpp  Order.h  OrdersCollection.cpp  OrdersCollection.h
